--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Etg.Yams" version="1.0.10" targetFramework="net461" />
+  <package id="Autofac" version="3.5.2" targetFramework="net461" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net461" />
+  <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net461" />
+  <package id="Etg.Yams" version="1.2.1" targetFramework="net461" />
   <package id="Humanizer" version="1.37.7" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
@@ -14,6 +17,7 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="net461" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net461" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net461" />
+  <package id="Semver" version="2.0.4" targetFramework="net461" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net461" />
